frontend/tests/cases/negative/effects/letdiaLinearity.gr
foo : Int <>
foo = let x â† pure 42 in pure 50
