frontend/tests/cases/negative/effects/letdiaLinearity.gr.output
Type checking failed: 
Linearity error: frontend/tests/cases/negative/effects/letdiaLinearity.gr:2:26:
Linear variable `x` is never used.